--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -87,7 +87,7 @@
 
   <div class="action-container">
 
-    <div class="save-btn">
+    <div class="save-btn"  >
 
       <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M11.8187 1.35199C11.472 1.29366 11.102 1.29199 10.2203 1.29199H8.66699C7.25616
@@ -155,3 +155,7 @@
 
 
 </div>
+
+
+<button type="button" class="btn btn-primary" (click)="addAnnualAccessChild()">Create modal with component</button>
+
